Added list to pick present students

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap&text='Indelningsverket'"
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap&text='NäapoIndelningsverket'"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
@@ -13,8 +13,13 @@
 
 <body>
     <main>
-        <h1>Indelningsverket</h1>
-        <button id="starter" class="myButton">Blanda</button>
+        <div class="halfs">
+            <h1>Närvarande personer</h1>
+        </div>
+        <div class="halfs">
+            <h1>Indelningsverket</h1>
+            <button id="starter" class="myButton">Blanda</button>
+        </div>
     </main>
 </body>
 
